[gd_scene load_steps=9 format=2]

[ext_resource path="res://actors/BeatEmUpActor.gd" type="Script" id=1]
[ext_resource path="res://areas/0x72_16x16DungeonTileset.v4.png" type="Texture" id=2]
[ext_resource path="res://actors/ActionBus.gd" type="Script" id=3]
[ext_resource path="res://actors/Walk.gd" type="Script" id=4]
[ext_resource path="res://actors/Attack.gd" type="Script" id=5]

[sub_resource type="Animation" id=3]
resource_name = "AttackDagger"

[sub_resource type="Animation" id=1]
resource_name = "AttackHammer"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("WeaponLeft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 4, -4 ), Vector2( -4, -4 ), Vector2( 4, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("WeaponLeft:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.45, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 2, 1 ),
"update": 0,
"values": [ 30.0, 60.0, -105.0, -90.0, 30.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WeaponRight:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, -4 ), Vector2( 4, -4 ), Vector2( -4, -4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("WeaponRight:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25, 0.45, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -30.0, -60.0, 105.0, 90.0, -30.0 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6, 2 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
region_enabled = true
region_rect = Rect2( 64, 128, 16, 16 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -4, -4, 4, -4, 4, 0, -4, 0 )

[node name="ActionBus" type="Node" parent="."]
script = ExtResource( 3 )
up = "up"
left = "left"
down = "down"
right = "right"
attack = "attack"
defend = "defend"
jump = "jump"
dash = "dash"

[node name="Walk" type="Node" parent="."]
script = ExtResource( 4 )

[node name="WeaponRight" type="Sprite" parent="."]
position = Vector2( -4, -4 )
rotation = -0.523598
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
region_enabled = true
region_rect = Rect2( 136, 96, 8, 16 )

[node name="WeaponLeft" type="Sprite" parent="."]
visible = false
position = Vector2( 4, -4 )
rotation = 0.523599
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
flip_h = true
region_enabled = true
region_rect = Rect2( 136, 96, 8, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/AttackDagger = SubResource( 3 )
anims/AttackHammer = SubResource( 1 )

[node name="Attack" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="Attack"]
collision_layer = 0

[node name="Left" type="CollisionShape2D" parent="Attack/Area2D"]
position = Vector2( -10, -5.2 )
shape = SubResource( 2 )
disabled = true

[node name="Right" type="CollisionShape2D" parent="Attack/Area2D"]
position = Vector2( 10, -5.2 )
shape = SubResource( 2 )
disabled = true
[connection signal="attack_pressed" from="ActionBus" to="AnimationPlayer" method="play" binds= [ "Attack" ]]
[connection signal="down_pressed" from="ActionBus" to="Walk" method="set_vertical_direction" binds= [ 1 ]]
[connection signal="down_released" from="ActionBus" to="Walk" method="set_vertical_direction" binds= [ 0 ]]
[connection signal="left_pressed" from="ActionBus" to="Sprite" method="set_flip_h" binds= [ true ]]
[connection signal="left_pressed" from="ActionBus" to="Walk" method="set_horizontal_direction" binds= [ -1 ]]
[connection signal="left_pressed" from="ActionBus" to="Attack" method="set_direction" binds= [ -1 ]]
[connection signal="left_pressed" from="ActionBus" to="WeaponLeft" method="show"]
[connection signal="left_pressed" from="ActionBus" to="WeaponRight" method="hide"]
[connection signal="left_released" from="ActionBus" to="Walk" method="set_horizontal_direction" binds= [ 0 ]]
[connection signal="right_pressed" from="ActionBus" to="Sprite" method="set_flip_h" binds= [ false ]]
[connection signal="right_pressed" from="ActionBus" to="Walk" method="set_horizontal_direction" binds= [ 1 ]]
[connection signal="right_pressed" from="ActionBus" to="Attack" method="set_direction" binds= [ 1 ]]
[connection signal="right_pressed" from="ActionBus" to="WeaponLeft" method="hide"]
[connection signal="right_pressed" from="ActionBus" to="WeaponRight" method="show"]
[connection signal="right_released" from="ActionBus" to="Walk" method="set_horizontal_direction" binds= [ 0 ]]
[connection signal="up_pressed" from="ActionBus" to="Walk" method="set_vertical_direction" binds= [ -1 ]]
[connection signal="up_released" from="ActionBus" to="Walk" method="set_vertical_direction" binds= [ 0 ]]
